<resources>
    <string name="app_name">Garage Share</string>

    <string name="action_settings">Settings</string>
    <string name="dialog_button_delete">Delete</string>

    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_edit_profile">Edit User profile</string>
    <string name="menu_set_place">Set location</string>

    <string name="menu_edit_post">Edit space</string>
    <string name="menu_delete_post">Delete space</string>
    <string name="menu_space_users">Space Users</string>
    <string name="menu_add_space">Add new space</string>

    <string name="menu_add_user">Allow Access</string>
    <string name="menu_block_user">Block Access</string>
    <string name="menu_delete_user">Delete Request</string>

    <string name="menu_get_photo">Create new photo</string>
    <string name="menu_get_image">Select from gallery</string>
    <string name="menu_delete_image">Delete image</string>

    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipis</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">User password</string>
    <string name="hint_email">User email</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_map">Map</string>
    <string name="heading_my_posts">My Spaces</string>
    <string name="loading">Loading…</string>
    <string name="updating">Updating…</string>
    <string name="field_required">Required field</string>
    <string name="finish_use_title">Finish usage</string>
    <string name="finish_use_message" formatted="false">Finishing use space \'%s\' or booking on tomorrow?</string>
    <string name="book_space">Book</string>
    <string name="select_booked_time_dialog_title">Select booked time</string>

    <string name="post_hint_title">Title</string>
    <string name="post_hint_description">Description</string>
    <string name="post_location_title" formatted="false">Location %s</string>
    <string name="post_location_hint">Tap to select Location</string>
    <string name="post_items_count" formatted="false">Items: %d</string>
    <string name="post_used_items_count" formatted="false">Used: %d</string>
    <string name="post_access_already_requested_text" formatted="false">You already request access to %s space.</string>
    <string name="post_access_blocked_text" formatted="false">You access to %s space blocked.</string>

    <string name="post_request_access_title">Request access</string>
    <string name="post_request_access_message">To use this space you want to request access.</string>



    <string name="post_item_use_it">Use it</string>
    <string name="post_item_already_used" formatted="false">Item \'%s\' already used.</string>
    <string name="post_item_user_use_one">You can\'t use more than one.</string>
    <string name="post_item_location_so_far">You current location so far. Please check you location and try later when location icon will be white.</string>

    <string name="notification_box_used_title" formatted="false">%s - \'%s\'</string>
    <string name="notification_box_used_message" formatted="false">Used box \'%s\' from %s</string>
    <string name="notification_box_booked_message" formatted="false">Box \'%s\' booked at %s</string>

    <string name="notification_access_requested_title" formatted="false">Access requested to <b>%s</b></string>
    <string name="notification_access_requested_message" formatted="false">User <i>%s</i> request access to you space <b>%s</b></string>

    <string name="notification_access_changed_title" formatted="false">Access updated to %s</string>
    <string name="notification_access_deleted">You was deleted from this space.</string>
    <string name="notification_access_granted">Access to space granted.</string>
    <string name="notification_access_blocked">Access to space blocked.</string>

    <string name="item_dialog_title_add">Add new item</string>
    <string name="item_dialog_title_edit">Edit item</string>
    <string name="item_dialog_title_hint">Item name</string>

    <!-- test-->
    <string name="menu_select_location">Select Location</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
</resources>
